[package]
name = "token-mints"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.7"
solana-program = "2.3.0"
solana-system-interface = { version = "1.0.0", features = ["bincode"] }
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
tokio = "1.48.0"

[dev-dependencies]
solana-program-test = "2.3.13"
solana-sdk = "2.3.1"

[lib]
crate-type = ["cdylib", "lib"]